hphp/hack/test/typecheck/do_while_condition_typechange.php.exp
File "do_while_condition_typechange.php", line 16, characters 11-11:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
